@@ -1091,3 +1091,8 @@ Reggie, 16.4.1999:
 ------------------
 - More work on footnotes/endnotes
 - Started with autoformat
+
+Reggie, 17.4.1999:
+------------------
+- More work on footnote descriptions
+- More work on autoformat
